2002-12-29  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (load_audio_out_driver),
	(video_window_translate_point), (gtk_xine_play): remove debug

2002-12-29  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_realize), (gtk_xine_play): fix the last
	bits missing for the Visual Effects plugins to work. Only Goom is
	supported at the moment

2002-12-29  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/Makefile.am: use pkg-config for xine as well now

2002-12-27  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: upd
	* data/totem.schemas.in: upd
	* src/gtk-xine.c: (gtk_xine_instance_init), (update_mediadev_conf),
	(show_vfx_changed_cb), (load_config_from_gconf), (gtk_xine_play),
	(gtk_xine_get_mrls): upd
	* src/totem.c: (on_checkbutton2_toggled), (show_vfx_changed_cb),
	(totem_setup_preferences): added Visual Effects Playback when a stream
	with no video is playing. See http://sourceforge.net/mailarchive/forum.php?thread_id=1460406&forum_id=11923 for interesting code

2002-12-27  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am:
	* src/gtk-xine.c: (gtk_xine_instance_init), (frame_output_cb),
	(gtk_xine_open), (gtk_xine_close):
	* src/totem.c: (totem_action_set_mrl), (on_checkbutton1_toggled),
	(on_combo_entry1_changed), (auto_resize_changed_cb),
	(mediadev_changed_cb), (totem_setup_preferences), (main):
	only resize the video if it's not the logo we're going to be showing,
	add the mrl to the GtkXine widget, use GCONF_PREFIX, cleanups
	(Closes: #101475)

2002-12-27  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: added some targets to remove the need for a manual
	regenerate-build-sources line

2002-12-27  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (on_about1_activate): the Copyright notice shouldn't be
	translatable (Closes: #101947, #102010)

2002-12-24  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am:
	* src/gtk-xine.c: (gtk_xine_filter_events), (gtk_xine_realize):