@@ -1,3 +1,8 @@
+2002-12-30  Bastien Nocera  <hadess@hadess.net>
+
+	* src/input_gnomevfs.c: (gnomevfs_plugin_get_optional_data):
+	disable the subtitle stuff for now
+
 2002-12-29  Bastien Nocera  <hadess@hadess.net>
 
 	* src/gtk-xine.c: (load_audio_out_driver),
